--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>Dino Game</title>
+    <script src="./js/script.js" charset="UTF-8" defer></script>
 </head>
+
 <body>
-    
-    <script src="./js/script.js"></script>
+    <div class="background">
+
+        <div class="dino"> </div>
+
+    </div>
+
 </body>
+
 </html>
